# Rust-Katas

./: Cargo.toml  README.md
src/: main.rs  problems.rs
src/probs/: array_diff.rs  backprimes.rs  check_cheating.rs  deadfish.rs  diamond.rs  dupwords.rs  formmin.rs  integer_partis.rs  last_digit.rs  magnet_boxes.rs  mod.rs  prime_decomposition.rs  range_extraction.rs  rot13.rs  simple_assembler.rs  sum_parts.rs  triplets_secret.rs  weight_club.rs
src/probs/four_kyus/: algebraic_lists.rs  human_duration_format.rs  integer_parts.rs  mod.rs  morse_advanced.rs  next_smaller.rs  paintfuck.rs  sum_factors.rs
src/probs/own_kumites/: fixed_length_integer_partitions.rs  mod.rs
src/probs/three_kyus/: algebraic_factors.rs  mod.rs  rail_fence.rs  spirals.rs
src/utils/: mod.rs  primes.rs
