[package]
name = "rust_katas"
version = "0.1.0"
authors = ["Eric van der Toorn <e.a.vandertoorn@student.tudelft.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.2"
indicatif = "0.15.0"
lazy_static = "1.4.0"
rand = "0.7.3"